force-app/main/default/objects/zkmulti__HazMatDetails__c/zkmulti__HazMatDetails__c.object-meta.xml
<CustomObject>
    <label>Dangerous Goods</label>
    <nameField>
        <label>Dangerous Goods Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dangerous Goods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>