force-app/main/default/objects/zkmulti__HazMatDetails__c/fields/zkmulti__EmergencyContactNumber__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EmergencyContactNumber__c</fullName>
    <description>Telephone number to use for contact in the event of an emergency</description>
    <inlineHelpText>Telephone number to use for contact in the event of an emergency</inlineHelpText>
    <label>Emergency Contact Number</label>
    <type>Phone</type>
</CustomField>