force-app/main/default/objects/zkmulti__HazMatDetails__c/fields/zkmulti__Quantity__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>