force-app/main/default/objects/zkmulti__HazMatDetails__c/fields/zkmulti__ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ReferenceNumber__c</fullName>
    <label>Reference Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>