force-app/main/default/objects/zkmulti__HazMatDetails__c/listViews/zkmulti__All.listView-meta.xml
<ListView>
    <fullName>zkmulti__All</fullName>
    <columns>NAME</columns>
    <columns>zkmulti__Carrier__c</columns>
    <columns>zkmulti__Is_Profile__c</columns>
    <columns>zkmulti__Container__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>